[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ladybug-memory-mcp"
version = "0.1.0"
description = "Persistent graph memory MCP server for AI agents using LadybugDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "arunkse" }
]
keywords = ["mcp", "memory", "agent", "ladybugdb", "graph", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "fastembed>=0.3.0",
    "real-ladybug>=0.15.0",
]

[project.scripts]
ladybug-memory-mcp = "ladybug_memory_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ladybug_memory_mcp"]
